[gd_scene load_steps=6 format=3 uid="uid://cjfhe5ek7bu3k"]

[ext_resource type="FontFile" path="res://assets/TitleFont.tres" id="1"]
[ext_resource type="FontFile" path="res://assets/DefaultFont.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://vpjfuch1u7i2" path="res://assets/logo-big.png" id="3"]
[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://cj3f1i2oiai0x" path="res://assets/settings_icon.png" id="6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0823529, 0.423529, 0.635294, 1)

[node name="PlayButton" type="Button" parent="."]
custom_minimum_size = Vector2(600, 300)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -110.0
offset_right = 300.0
offset_bottom = 190.0
theme_override_fonts/font = ExtResource("1")
text = "Play"

[node name="ModeLabel" type="Label" parent="PlayButton"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -187.5
offset_top = -100.0
offset_right = 187.5
offset_bottom = -24.0
text = "Mode: -"

[node name="SetLogo" type="TextureRect" parent="."]
custom_minimum_size = Vector2(800, 800)
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 850.0
texture = ExtResource("3")
expand_mode = 1

[node name="SettingsButton" type="TextureButton" parent="."]
visible = false
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -170.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 170.0
texture_normal = ExtResource("6")

[node name="Buttons" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 500)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 290.0
offset_right = 200.0
offset_bottom = 790.0
theme_override_constants/separation = 20

[node name="GamemodeButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2")
text = "Change mode"

[node name="TutorialButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2")
disabled = true
text = "Tutorial"

[node name="StatisticsButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2")
disabled = true
text = "Statistics"

[node name="SettingsButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2")
disabled = true
text = "Settings"

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Buttons/GamemodeButton" to="." method="_on_GamemodeButton_pressed"]
